--- a/ers/package.json
+++ b/ers/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.0",
     "pg": "^7.4.0",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   }
 }
